# UofG_Robotics_TDP

./: .gitignore  Documentation.md  LICENSE  README.md  Time_Allocation.csv  requirements.txt
BasicSimulator/: game_master.py  smart_player_demo.py
BasicSimulator/GameEngine/: ball_model.py  game_simulator.py  visualizer.py
GameEngine/: ball_model.py  collisions.py  game_master.py  game_simulator.py  robot_model.py  temp.py  visualizer.py
Planner/: team_master.py
Robots/: goalkeeper_controller.py
Session_Notes/: session_1  session_2
Simulation/: ball_model.py  base_simulator.py  robot_model.py  visualizer.py
docs/: Actions_Avoid_Obstacle.md  Actions_Dribble_Ball.md  Conclusions.md  Result_Analysis.md  simulation.md  strategy.md  strategy_team_0.md
docs/Basic_Actions/: Go_Around_Point.md  Go_To_Point.md  Kick_Ball.md  Rotate_Towards.md
docs/Organisation/: Project_Organisation.md
docs/Ros_Methodology/: Architecture.md  Simulation.md  Visualisation.md
docs/Strategic_Actions/: Avoid_Obstacle.md  Cover_Opponent.md  Dribble.md  Go_To_Strategic_point.md  Pass_Ball.md  Redirect_Ball.md  Score_Goal.md
docs/Strategy/: Strategy_Team_0.md  Strategy_Team_1.md
docs/Supporting_functions/Capture_Ball/: Capture_Position.md  Soonest_Ball.md  Soonest_Contact.md
docs/Supporting_functions/Kick_Ball/: Ball_Pass.md  Goal_Pass.md  Player_Pass.md
rdp_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
rdp_ws/src/mybot_control/: CMakeLists.txt  package.xml
rdp_ws/src/mybot_control/launch/: mybot_control.launch
rdp_ws/src/mybot_description/: CMakeLists.txt  package.xml
rdp_ws/src/mybot_description/urdf/: materials.xacro  (+2 more)
rdp_ws/src/mybot_gazebo/: CMakeLists.txt  package.xml
robocup_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
robocup_ws/src/GameEngine/: CMakeLists.txt  game_master.py  game_simulator.py  package.xml  setup.py  visualizer.py
robocup_ws/src/Planner/: CMakeLists.txt  goalkeeper_controller.py  package.xml  robot_control.py  team_master.py  test_controller.py
robocup_ws/src/Robots/: ball_model.py  robot_model.py
robocup_ws/src/game_interfaces/: CMakeLists.txt  package.xml
robocup_ws/src/game_interfaces/msg/: PlayerCommand.msg  Position.msg  TeamCommand.msg  TeamPosition.msg
robocup_ws/src/game_interfaces/srv/: ActionServices.srv  SimulationUpdate.srv  TeamUpdate.srv
robocup_ws/src/robocup_gazebo/: package.xml
(+66 files in other folders)
